[gd_scene load_steps=2 format=3 uid="uid://ca38j4fx6gt2n"]

[ext_resource type="Script" uid="uid://bx8yfxyoce8fb" path="res://src/game/screens/ui/game_over_screen.gd" id="1_7fw1v"]

[node name="GameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7fw1v")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 522.0
offset_top = 244.0
offset_right = 623.0
offset_bottom = 267.0
text = "GAME OVER !"

[node name="Container" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -53.0
offset_top = -15.5
offset_right = 53.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2

[node name="ReplayButton" type="Button" parent="Container"]
layout_mode = 2
text = "Replay"

[node name="BackToMain" type="Button" parent="Container"]
layout_mode = 2
text = "Main Menu"

[node name="QuitButton" type="Button" parent="Container"]
layout_mode = 2
text = "Quit"
